test/errors/def_parameters_bare_star.py
def f0(*,):
    pass
